@@ -1,3 +1,8 @@
+2005-01-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/htdocs/tasks/gstreamer.xml:
+	  Add some more notes on XML.
+
 2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/htdocs/tasks/code.xml:
